<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
					  http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.holy.holyResteasy</groupId>
	<artifactId>holyResteasy</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>HolyResteasy - Reference project to use Holy with RestEasy</name>
	<modules>
		<module>business</module>
		<module>view</module>
	</modules>

	<properties>
		<mycontainer.version>1.2.24</mycontainer.version>
		<jdk.version>1.6</jdk.version>
                <default.encoding>UTF-8</default.encoding>
                <maven-eclipse-plugin.version>2.9</maven-eclipse-plugin.version>
                <easymock.version>3.0</easymock.version>
                <hibernate.version>4.1.0.Final</hibernate.version>
 		<hibernate-annotations.version>3.5.6-Final</hibernate-annotations.version>
		<ehcache.version>1.2.3</ehcache.version>
		<hsqldb.version>1.8.0.10</hsqldb.version>
		<commons-fileupload.version>1.2.1</commons-fileupload.version>
                <commons-io.version>1.4</commons-io.version>
		<commons-codec.version>1.3</commons-codec.version>
 		<jdom.version>1.0</jdom.version>
 		<commons-lang.version>2.4</commons-lang.version>
		<commons-httpclient.version>3.1</commons-httpclient.version>
                <jsigner.version>1.3</jsigner.version>
		<slf4j.version>1.5.6</slf4j.version>
		<log4j.version>1.2.14</log4j.version>
		<junit.version>4.0</junit.version>
		<javaee-api.version>6.0</javaee-api.version>
		<servlet-api.version>2.5</servlet-api.version>
		<el-api.version>1.0</el-api.version>
		<persistence-api.version>1.0</persistence-api.version>
		<jsr250-api.version>1.0</jsr250-api.version>
		<resteasy-jaxrs.version>2.2.1.GA</resteasy-jaxrs.version>
		<gson.version>1.7.1</gson.version>
		<cobertura.version>2.4</cobertura.version>
	</properties>

	<repositories>
		<repository>
			<id>nuxeo.org</id>
			<url>https://maven.nuxeo.org/nexus/content/repositories/public</url>
		</repository>

		<repository>
			<id>repomaven</id>
			<url>http://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>repomaven2</id>
			<url>http://repo2.maven.org/maven2</url>
		</repository>
		<repository>
			<id>dev.java.net</id>
			<url>http://download.java.net/maven/2/</url>
		</repository>
		<repository>
			<id>jboss</id>
			<url>http://repository.jboss.org/maven2</url>
		</repository>
		<repository>
			<id>jboss-releases</id>
			<url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
		</repository>
		<repository>
			<id>jboss-thirdparty-releases</id>
			<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
		</repository>
		<repository>
			<id>mycontainer</id>
			<url>http://repo.pyrata.org/release/maven2/</url>
		</repository>
		<repository>
			<id>jsigner</id>
			<url>http://jsigner.googlecode.com/svn/maven2/repository/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>mycontainer</id>
			<url>http://repo.pyrata.org/release/maven2/</url>
		</pluginRepository>
		<pluginRepository>
			<id>jsigner</id>
			<url>http://jsigner.googlecode.com/svn/maven2/repository/</url>
		</pluginRepository>
		<pluginRepository>
			<id>codehaus_snapshots</id>
			<url>http://snapshots.repository.codehaus.org/</url>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>${maven-eclipse-plugin.version}</version>
			</plugin>			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<encoding>${default.encoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mycontainer</groupId>
				<artifactId>maven-mycontainer-plugin</artifactId>
				<version>${mycontainer.version}</version>
				<dependencies>
					<dependency>
						<groupId>org.easymock</groupId>
						<artifactId>easymock</artifactId>
						<version>${easymock.version}</version>
					</dependency>
					<dependency>
						<groupId>org.hibernate</groupId>
						<artifactId>hibernate-core</artifactId>
						<version>${hibernate.version}</version>
					</dependency>
					<dependency>
						<groupId>org.hibernate</groupId>
						<artifactId>hibernate-annotations</artifactId>
						<version>${hibernate-annotations.version}</version>
					</dependency>
					<dependency>
						<groupId>org.hibernate</groupId>
						<artifactId>hibernate-entitymanager</artifactId>
						<version>${hibernate.version}</version>
					</dependency>
					<dependency>
						<groupId>org.hibernate</groupId>
						<artifactId>hibernate-ehcache</artifactId>
						<version>${hibernate.version}</version>
					</dependency>
					<dependency>
						<groupId>net.sf.ehcache</groupId>
						<artifactId>ehcache</artifactId>
						<version>${ehcache.version}</version>
					</dependency>
					<dependency>
						<groupId>hsqldb</groupId>
						<artifactId>hsqldb</artifactId>
						<version>${hsqldb.version}</version>
					</dependency>					
				</dependencies>
				<configuration>
					<systemProperties>
						<systemProperty>
							<name>org.mortbay.jetty.Request.maxFormContentSize</name>
							<value>500000</value>
						</systemProperty>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
			</plugin>			
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<forkMode>once</forkMode>
					<argLine>-Xms128m -Xmx1024m -XX:MaxPermSize=256m</argLine>
					<childDelegation>false</childDelegation>
				</configuration>
			</plugin>			
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<includes>
					<include>**/*.*</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/persistence.xml</include>
				</includes>
			</resource>
		</resources>
	</build>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
			    <groupId>org.holy.holyResteasy</groupId>
			    <artifactId>business-core</artifactId>
			    <version>${pom.version}</version>
			    <type>ejb</type>
			</dependency>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons-fileupload.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons-codec.version}</version>
			</dependency>
			<dependency>
				<groupId>jdom</groupId>
				<artifactId>jdom</artifactId>
				<version>${jdom.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>${commons-lang.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>${hibernate.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-annotations</artifactId>
				<version>${hibernate-annotations.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-entitymanager</artifactId>
				<version>${hibernate.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-ehcache</artifactId>
				<version>${hibernate.version}</version>
			</dependency>

			<dependency>
				<groupId>br.com.jsigner</groupId>
				<artifactId>jsigner-annotations</artifactId>
				<version>${jsigner.version}</version>
			</dependency>
			<dependency>
				<groupId>hsqldb</groupId>
				<artifactId>hsqldb</artifactId>
				<version>${hsqldb.version}</version>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymock</artifactId>
				<version>${easymock.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
			</dependency>
			<dependency>
			    <groupId>javax</groupId>
			    <artifactId>javaee-api</artifactId>
			    <version>${javaee-api.version}</version>
			    <scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>servlet-api</artifactId>
				<version>${servlet-api.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.el</groupId>
				<artifactId>el-api</artifactId>
				<version>${el-api.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.persistence</groupId>
				<artifactId>persistence-api</artifactId>
				<version>${persistence-api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-ejb</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-kernel</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-jpa</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-datasource</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-mail</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-annotations</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-jms</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-web</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.annotation</groupId>
				<artifactId>jsr250-api</artifactId>
				<version>${jsr250-api.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-httpclient</groupId>
				<artifactId>commons-httpclient</artifactId>
				<version>${commons-httpclient.version}</version>
			</dependency>			
			<dependency>
				<groupId>org.jboss.resteasy</groupId>
				<artifactId>resteasy-jaxrs</artifactId>
				<version>${resteasy-jaxrs.version}</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>${gson.version}</version>
				<type>jar</type>
			</dependency>		
		</dependencies>
	</dependencyManagement>

	<reporting>
		<outputDirectory>target/site</outputDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin
				</artifactId>
				<reportSets>
					<reportSet>
						<reports>
							<report>index</report>
							<report>dependencies</report>
							<report>javadoc</report>
							<report>issue-tracking</report>
							<report>cim</report>
							<report>scm</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>${cobertura.version}</version>
				<configuration>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
					<instrumentation>
						<excludes>
							<exclude>**/*Exception.class</exclude>
						</excludes>
					</instrumentation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>dashboard-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>	
</project>
